--- a/install
+++ b/install
@@ -18,7 +18,7 @@ done
 
 # Packages
 brew update
-brew install git bash-completion macvim the_silver_searcher vim wget z
+brew install git bash-completion httpie macvim the_silver_searcher vim wget z
 
 # Config
 git config --global core.editor $(which vim)
