--- a/install
+++ b/install
@@ -12,15 +12,25 @@ for rc in *rc *profile *config tmux.conf; do
   ln -sfv $BASE/$rc ~/.$rc
 done
 
+if [ ! -e ~/.git-prompt.sh ]; then
+  curl https://raw.githubusercontent.com/git/git/master/contrib/completion/git-prompt.sh -o ~/.git-prompt.sh
+fi
+
 # Install Homebrew
 [ -z "$(which brew)" ] &&
   ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 
 # Packages
-brew update
 brew install \
-  git bash-completion heroku httpie jq macvim python ruby the_silver_searcher \
+  git bash-completion httpie jq python ruby the_silver_searcher \
   tmux vim wget z
+
+brew cask install iterm2 keepingyouawake
 
 # Config
 git config --global core.editor $(which vim)
+
+# vim-plug
+mkdir -p ~/.vim/autoload
+curl --insecure -fLo ~/.vim/autoload/plug.vim https://raw.github.com/junegunn/vim-plug/master/plug.vim
+vim +PlugInstall +qall
